--- a/package.json
+++ b/package.json
@@ -52,5 +52,10 @@
     "standard-version": "^9.5.0",
     "tslib": "^2.4.0",
     "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "classnames": "^2.3.2",
+    "react-icons": "^4.10.1",
+    "tailwind-merge": "^1.14.0"
   }
 }
