--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
     "standard-version": "^9.5.0",
     "tslib": "^2.4.0",
     "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "build": "^0.1.4"
   }
 }
