--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
   "homepage": "https://github.com/syyclops/syylibjs#readme",
   "peerDependencies": {
     "classnames": "^2.3.2",
-    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
@@ -52,7 +51,8 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "standard-version": "^9.5.0",
     "tslib": "^2.4.0",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.3",
+    "moment": "^2.29.4"
   },
   "dependencies": {
     "classnames": "^2.3.2",
