--- a/package.json
+++ b/package.json
@@ -29,11 +29,8 @@
   },
   "homepage": "https://github.com/syyclops/syylibjs#readme",
   "peerDependencies": {
-    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.9.0",
-    "tailwind-merge": "^1.13.0",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
@@ -42,21 +39,26 @@
     "@rollup/plugin-node-resolve": "^14.1.0",
     "@rollup/plugin-terser": "^0.4.3",
     "@rollup/plugin-typescript": "^8.5.0",
+    "@types/draft-js": "^0.11.15",
     "@types/react": "^16.9.53",
+    "@types/react-color": "^3.0.10",
     "@types/react-dom": "^16.9.8",
     "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
+    "moment": "^2.29.4",
     "rollup": "^2.79.1",
     "rollup-plugin-dts": "^4.2.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "standard-version": "^9.5.0",
     "tslib": "^2.4.0",
-    "typescript": "^4.8.3",
-    "moment": "^2.29.4"
+    "typescript": "^4.8.3"
   },
   "dependencies": {
     "classnames": "^2.3.2",
-    "react-icons": "^4.10.1",
-    "tailwind-merge": "^1.14.0"
+    "draft-js": "^0.11.7",
+    "react-color": "^2.19.3",
+    "react-icons": "^4.9.0",
+    "rollup-plugin-import-css": "^3.3.5",
+    "tailwind-merge": "^1.13.0"
   }
 }
