--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   "scripts": {
     "build": "rollup -c",
     "start": "rollup -c -w",
-    "release": "standard-version"
+    "release": "standard-version",
+    "test:cli": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage"
   },
   "repository": {
     "type": "git",
@@ -39,19 +42,29 @@
     "@rollup/plugin-node-resolve": "14.1.0",
     "@rollup/plugin-terser": "0.4.3",
     "@rollup/plugin-typescript": "8.5.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^13.5.0",
     "@types/draft-js": "0.11.15",
     "@types/react": "16.9.53",
     "@types/react-color": "3.0.10",
     "@types/react-dom": "16.9.8",
+    "@vitejs/plugin-react": "^4.0.0",
+    "@vitest/coverage-v8": "^0.33.0",
+    "@vitest/ui": "^0.33.0",
     "babel-core": "6.26.3",
     "babel-runtime": "6.26.0",
+    "jsdom": "^23.0.1",
     "moment": "2.29.4",
     "rollup": "2.79.1",
     "rollup-plugin-dts": "4.2.2",
     "rollup-plugin-peer-deps-external": "2.2.4",
     "standard-version": "9.5.0",
     "tslib": "2.4.0",
-    "typescript": "4.8.3"
+    "typescript": "4.8.3",
+    "vite": "^4.4.4",
+    "vitest": "^0.33.0"
   },
   "dependencies": {
     "classnames": "2.3.2",
