--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
     "declarationMap": true
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist", "rollup.config.js"]
+  "exclude": ["node_modules", "dist", "rollup.config.js", "src/vitest"]
 }
