--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,3 +27,7 @@ jobs:
       run: npm install --force
     - name: Run the tests
       run: npm run test:cli
+    - name: Run the tests and generate coverage report
+      run: npm test:coverage
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
