--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,9 +25,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Install dependencies
       run: npm install --force
-    - name: Run the tests
-      run: npm run test:cli
     - name: Run the tests and generate coverage report
-      run: npm test:coverage
+      run: npm run test:coverage
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
