--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
   "peerDependencies": {
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "@nivo/bar": "^0.87.0",
+    "@nivo/core": "^0.87.0",
+    "@nivo/line": "^0.87.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "22.0.2",
