--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "syylibjs",
   "version": "9.0.0",
-  "description": "A component library created using TailwindCSS exclusively for Syyclops.",
+  "description": "A component library created using tailwindCSS exclusively for Syyclops.",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
@@ -37,7 +37,12 @@
     "tailwindcss": "3.3.2",
     "@nivo/bar": "^0.87.0",
     "@nivo/core": "^0.87.0",
-    "@nivo/line": "^0.87.0"
+    "@nivo/line": "^0.87.0",
+    "tailwind-merge": "1.13.0",
+    "classnames": "2.3.2",
+    "draft-js": "0.11.7",
+    "react-color": "2.19.3",
+    "react-icons": "4.9.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "22.0.2",
@@ -63,18 +68,11 @@
     "rollup": "2.79.1",
     "rollup-plugin-dts": "4.2.2",
     "rollup-plugin-peer-deps-external": "2.2.4",
+    "rollup-plugin-import-css": "3.3.5",
     "standard-version": "9.5.0",
     "tslib": "2.4.0",
     "typescript": "4.8.3",
     "vite": "^4.4.4",
     "vitest": "^0.33.0"
-  },
-  "dependencies": {
-    "classnames": "2.3.2",
-    "draft-js": "0.11.7",
-    "react-color": "2.19.3",
-    "react-icons": "4.9.0",
-    "rollup-plugin-import-css": "3.3.5",
-    "tailwind-merge": "1.13.0"
   }
 }
