--- a/package.json
+++ b/package.json
@@ -35,11 +35,17 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "tailwind-merge": "1.13.0",
-    "classnames": "2.3.2",
-    "draft-js": "0.11.7",
-    "react-color": "2.19.3",
-    "react-icons": "4.9.0"
+    "chart.js": "^4.4.4",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-adapter-moment": "^1.0.1",
+    "chartjs-plugin-zoom": "^2.0.1",
+    "classnames": "^2.5.1",
+    "date-fns": "^3.6.0",
+    "draft-js": "^0.11.7",
+    "react-color": "^2.19.3",
+    "react-icons": "^5.3.0",
+    "recharts": "^2.12.7",
+    "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "22.0.2",
@@ -64,8 +70,8 @@
     "moment": "2.29.4",
     "rollup": "2.79.1",
     "rollup-plugin-dts": "4.2.2",
-    "rollup-plugin-peer-deps-external": "2.2.4",
     "rollup-plugin-import-css": "3.3.5",
+    "rollup-plugin-peer-deps-external": "2.2.4",
     "standard-version": "9.5.0",
     "tslib": "2.4.0",
     "typescript": "4.8.3",
